update app url
